applications/prometheus/base/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: monitoring
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/port:   '9090'
spec:
  selector:
    app: prometheus-server
  ports:
    - name: sidecar
      port: 10901
      targetPort: 10901
    - name: prometheus
      port: 8080
      targetPort: 9090
