applications/prometheus/base/prom-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ui
  namespace: monitoring
spec:
  rules:
  - host: prometheus.d15ef0b9-5274-4557-9d1a-7969c3a28b75.lb.civo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: prometheus-service
            port: 
              number: 8080
  ingressClassName: nginx
